--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,63 @@
+# Encore.dev specific
 /.encore
 encore.gen.go
 encore.gen.cue
 /encore.gen
+
+# Dependency directories
+node_modules/
+
+# Build outputs
+.next/
+out/
+build/
+dist/
+.bin/
+.init/.cache*
+
+# Environment files
+.env
+.env*
+.env.local
+.env.prod
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.sample
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Testing
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Database files
+*.sqlite
+*.db
+
+# Compiled Python files
+*.pyc
+
+# Alembic migration files
+alembic/versions/
+
+# Miscellaneous
+*.pem
+*.tsbuildinfo
