--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,11 @@ USE_SSL=false
 # Email address for Let's Encrypt notifications
 ACME_EMAIL=your-email@example.com
 # Basic auth for Traefik dashboard. Generate using htpasswd
-TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$hashedpassword"
+# FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be doubled for escaping.
+# To create a admin:password pair without prompt, the following command can be used:
+# echo $(htpasswd -nb admin password) | sed -e s/\\$/\\$\\$/g
+# -> admin:$apr1$lH3y4klW$iYrG4.rE6SdokGHs8zUUj.
+TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$lH3y4klW\$iYrG4.rE6SdokGHs8zUUj."
 
 # Domains
 TRAEFIK_DASHBOARD_DOMAIN=traefik.localhost
