--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,6 +1,6 @@
 services:
   traefik:
-    image: traefik:v3.1.2
+    image: traefik:latest
     command:
       - "--api.dashboard=true"
       - "--providers.docker=true"
@@ -23,8 +23,33 @@ services:
       - net
     restart: always
 
+  logto:
+    image: ghcr.io/logto-io/logto:latest
+    depends_on:
+      - db
+    environment:
+      - TRUST_PROXY_HEADER=1
+      - ENDPOINT=https://${LOGTO_DOMAIN}
+      - ADMIN_ENDPOINT=https://${LOGTO_ADMIN_DOMAIN}
+      - DB_URL=postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/logto
+    networks:
+      - net
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.logto-core.rule=Host(`${LOGTO_DOMAIN}`)"
+      - "traefik.http.routers.logto-core.entrypoints=websecure"
+      - "traefik.http.routers.logto-core.tls=true"
+      - "traefik.http.routers.logto-core.tls.certresolver=myresolver"
+      - "traefik.http.services.logto-core.loadbalancer.server.port=3001"
+      - "traefik.http.routers.logto-admin.rule=Host(`${LOGTO_ADMIN_DOMAIN}`)"
+      - "traefik.http.routers.logto-admin.entrypoints=websecure"
+      - "traefik.http.routers.logto-admin.tls=true"
+      - "traefik.http.routers.logto-admin.tls.certresolver=myresolver"
+      - "traefik.http.services.logto-admin.loadbalancer.server.port=3002"
+
   redis:
-    image: redis
+    image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
@@ -45,7 +70,7 @@ services:
         max-file: "6"
 
   db:
-    image: ankane/pgvector
+    image: encoredotdev/postgres:latest
     container_name: postgres_db
     ports:
       - "5433:5432"
@@ -71,76 +96,76 @@ services:
         max-file: "6"
 
 
-  api:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:latest
-    depends_on:
-      - traefik
-      - db
-      - redis
-      - dozzle
-    env_file:
-      - .env
-    environment:
-      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    networks:
-      - net
-    deploy:
-      replicas: ${APP_REPLICAS:-2}
-    restart: always
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN:-api.localhost}`)"
-      - "traefik.http.routers.app.tls=${USE_SSL:-false}"
-      - "traefik.http.routers.app.tls.certresolver=myresolver"
-      - "traefik.http.services.app.loadbalancer.server.port=8000"
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
-
-  background:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:latest
-    depends_on:
-      - db
-      - redis
-    environment:
-      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    networks:
-      - net
-    deploy:
-      replicas: ${BACKGROUND_REPLICAS:-2}
-    restart: always
-    env_file:
-      - .env
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
-
-  web:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:latest
-    depends_on:
-      - api
-    networks:
-      - net
-    restart: always
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN:-app.localhost}`)"
-      - "traefik.http.routers.web.tls=${USE_SSL:-false}"
-      - "traefik.http.routers.web.tls.certresolver=myresolver"
-      - "traefik.http.services.web.loadbalancer.server.port=3001"
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
+#  api:
+#    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:latest
+#    depends_on:
+#      - traefik
+#      - db
+#      - redis
+#      - dozzle
+#    env_file:
+#      - .env
+#    environment:
+#      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+#      - REDIS_HOST=redis
+#      - REDIS_PORT=6379
+#    networks:
+#      - net
+#    deploy:
+#      replicas: ${APP_REPLICAS:-2}
+#    restart: always
+#    labels:
+#      - "traefik.enable=true"
+#      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN:-api.localhost}`)"
+#      - "traefik.http.routers.app.tls=${USE_SSL:-false}"
+#      - "traefik.http.routers.app.tls.certresolver=myresolver"
+#      - "traefik.http.services.app.loadbalancer.server.port=8000"
+#    logging:
+#      driver: json-file
+#      options:
+#        max-size: "50m"
+#        max-file: "6"
+#
+#  background:
+#    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:latest
+#    depends_on:
+#      - db
+#      - redis
+#    environment:
+#      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+#      - REDIS_HOST=redis
+#      - REDIS_PORT=6379
+#    networks:
+#      - net
+#    deploy:
+#      replicas: ${BACKGROUND_REPLICAS:-2}
+#    restart: always
+#    env_file:
+#      - .env
+#    logging:
+#      driver: json-file
+#      options:
+#        max-size: "50m"
+#        max-file: "6"
+#
+#  web:
+#    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:latest
+#    depends_on:
+#      - api
+#    networks:
+#      - net
+#    restart: always
+#    labels:
+#      - "traefik.enable=true"
+#      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN:-app.localhost}`)"
+#      - "traefik.http.routers.web.tls=${USE_SSL:-false}"
+#      - "traefik.http.routers.web.tls.certresolver=myresolver"
+#      - "traefik.http.services.web.loadbalancer.server.port=3001"
+#    logging:
+#      driver: json-file
+#      options:
+#        max-size: "50m"
+#        max-file: "6"
 
   dozzle:
     image: amir20/dozzle:latest
