--- a/.env.sample
+++ b/.env.sample
@@ -12,9 +12,9 @@ ACME_EMAIL=your-email@example.com
 # Basic auth for Traefik dashboard. Generate using htpasswd
 # FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be doubled for escaping.
 # To create a admin:password pair without prompt, the following command can be used:
-# echo $(htpasswd -nb admin password) | sed -e s/\\$/\\$\\$/g
-# -> admin:$apr1$lH3y4klW$iYrG4.rE6SdokGHs8zUUj.
-TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$lH3y4klW\$iYrG4.rE6SdokGHs8zUUj."
+# htpasswd -nb admin password | sed 's/\$/\\$/g'
+# -> admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J.
+TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J."
 
 # Domains
 TRAEFIK_DASHBOARD_DOMAIN=traefik.localhost
