Working local baseline

--- a/.env.sample
+++ b/.env.sample
@@ -10,19 +10,20 @@ USE_SSL=false
 # Email address for Let's Encrypt notifications
 ACME_EMAIL=your-email@example.com
 # Basic auth for Traefik dashboard. Generate using htpasswd
-# FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be doubled for escaping.
+# FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be escaped.
 # To create a admin:password pair without prompt, the following command can be used:
 # htpasswd -nb admin password | sed 's/\$/\\$/g'
 # -> admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J.
 TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J."
 
 # Domains
-TRAEFIK_DASHBOARD_DOMAIN=traefik.localhost
-API_DOMAIN=api.localhost
-WEB_DOMAIN=web.localhost
-DOZZLE_DOMAIN=dozzle.localhost
-LOGTO_DOMAIN=logto.localhost
-LOGTO_ADMIN_DOMAIN=logto-admin.localhost
+DOMAIN=localdev.online
+TRAEFIK_DASHBOARD_DOMAIN="traefik.${DOMAIN}"
+API_DOMAIN="api.${DOMAIN}"
+WEB_DOMAIN="web.${DOMAIN}"
+DOZZLE_DOMAIN="dozzle.${DOMAIN}"
+LOGTO_DOMAIN="logto.${DOMAIN}"
+LOGTO_ADMIN_DOMAIN="logto-admin.${DOMAIN}"
 
 # Database Configuration
 # PostgreSQL user, password, and database name
@@ -41,3 +42,7 @@ LOGTO_MANAGEMENT_API_APPLICATION_SECRET=
 
 # Logto event webhook for stripe signing key
 LOGTO_APP_API_EVENT_WEBHOOK_SIGNING_KEY=
+
+LOGTO_GOOGLE_CONNECTOR_ID=
+LOGTO_GOOGLE_CLIENT_ID=
+LOGTO_GOOGLE_CLIENT_SECRET=
