--- a/.env.sample
+++ b/.env.sample
@@ -19,7 +19,7 @@ TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J."
 # Domains
 DOMAIN=localdev.online
 TRAEFIK_DASHBOARD_DOMAIN="traefik.${DOMAIN}"
-API_DOMAIN="api.${DOMAIN}"
+API_DOMAIN="backend.${DOMAIN}"
 WEB_DOMAIN="web.${DOMAIN}"
 DOZZLE_DOMAIN="dozzle.${DOMAIN}"
 LOGTO_DOMAIN="logto.${DOMAIN}"
