Replace dozzle BasicAuth with Traefiks BasicAuth

--- a/.env.sample
+++ b/.env.sample
@@ -9,12 +9,13 @@ USE_SSL=false
 # Traefik Configuration
 # Email address for Let's Encrypt notifications
 ACME_EMAIL=your-email@example.com
-# Basic auth for Traefik dashboard. Generate using htpasswd
+# Basic auth for Traefik & Dozzle dashboard. Generate using htpasswd
 # FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be escaped.
 # To create a admin:password pair without prompt, the following command can be used:
-# htpasswd -nb admin password | sed 's/\$/\\$/g'
-# -> admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J.
-TRAEFIK_DASHBOARD_AUTH="admin:\$apr1\$LRy6wY7U\$RDVR4gPQY.P0WtZe2O86J."
+# htpasswd -nbB admin password | sed 's/\$/\\$/g'
+# -> admin:\$2y\$05\$Gh.L5rYEJjyq1jm3RC5MdOug4ql1XkcKVD46stn14pQNXsX/44xim
+TRAEFIK_DASHBOARD_AUTH="admin:\$2y\$05\$Gh.L5rYEJjyq1jm3RC5MdOug4ql1XkcKVD46stn14pQNXsX/44xim"
+DOZZLE_DASHBOARD_AUTH="admin:\$2y\$05\$sae3pQYB7FaIqMNDsF5d0eVH/CuBHtbh8pCkIwq4VzB8.84XiAjHa"
 
 # Domains
 DOMAIN=localdev.online
