--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,10 +135,9 @@ services:
       - LOGTO_MANAGEMENT_API_RESOURCE=https://${LOGTO_DOMAIN}/api
       - LOGTO_MANAGEMENT_API_APPLICATION_ID=${LOGTO_MANAGEMENT_API_APPLICATION_ID}
       - LOGTO_MANAGEMENT_API_APPLICATION_SECRET=${LOGTO_MANAGEMENT_API_APPLICATION_SECRET}
-
-
-      - LOGTO_GOOGLE_CLIENT_ID
-      - LOGTO_GOOGLE_CLIENT_SECRET
+      - LOGTO_GOOGLE_CONNECTOR_ID=${LOGTO_GOOGLE_CONNECTOR_ID}
+      - LOGTO_GOOGLE_CLIENT_ID=${LOGTO_GOOGLE_CLIENT_ID}
+      - LOGTO_GOOGLE_CLIENT_SECRET=${LOGTO_GOOGLE_CLIENT_SECRET}
       - NODE_EXTRA_CA_CERTS=/etc/ssl/certs/mkcert-rootCA.pem
     volumes:
       - ./scripts/logto/custom-setup:/etc/logto/packages/cli/custom-setup
