--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -42,9 +42,10 @@ services:
 
   logto:
     image: ghcr.io/logto-io/logto:latest
-    restart: always
     depends_on:
       - db
+    entrypoint: [ "sh", "-c", "./packages/cli/custom-setup/entrypoint.sh" ]
+    #    entrypoint: ["sh", "-c", "npm run cli db seed -- --swe && npm start"]
     environment:
       - TRUST_PROXY_HEADER=1
       - ENDPOINT=https://${LOGTO_DOMAIN}
@@ -58,12 +59,17 @@ services:
       # Logto Specific
       - LOGTO_APP_ID=${LOGTO_APP_ID}
       - LOGTO_APP_SECRET=${LOGTO_APP_SECRET}
-      - LOGTO_APP_API_RESOURCE=https://${API_DOMAIN}
-      - LOGTO_APP_API_EVENT_WEBHOOK_URL=https://${API_DOMAIN}/stripe/logto/webhook
+      - LOGTO_APP_API_RESOURCE=https://${API_DOMAIN}/api
+      - LOGTO_APP_API_EVENT_WEBHOOK_URL=https://${API_DOMAIN}/api/stripe/logto/webhook
       - LOGTO_APP_API_EVENT_WEBHOOK_SIGNING_KEY=${LOGTO_APP_API_EVENT_WEBHOOK_SIGNING_KEY}
       - LOGTO_MANAGEMENT_API_RESOURCE=https://${LOGTO_DOMAIN}/api
       - LOGTO_MANAGEMENT_API_APPLICATION_ID=${LOGTO_MANAGEMENT_API_APPLICATION_ID}
       - LOGTO_MANAGEMENT_API_APPLICATION_SECRET=${LOGTO_MANAGEMENT_API_APPLICATION_SECRET}
+      - LOGTO_GOOGLE_CONNECTOR_ID=${LOGTO_GOOGLE_CONNECTOR_ID}
+      - LOGTO_GOOGLE_CLIENT_ID=${LOGTO_GOOGLE_CLIENT_ID}
+      - LOGTO_GOOGLE_CLIENT_SECRET=${LOGTO_GOOGLE_CLIENT_SECRET}
+    volumes:
+      - ./scripts/logto/custom-setup:/etc/logto/packages/cli/custom-setup
     networks:
       - net
     env_file:
@@ -141,76 +147,76 @@ services:
         max-file: "6"
 
 
-#  api:
-#    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:latest
-#    depends_on:
-#      - traefik
-#      - db
-#      - redis
-#      - dozzle
-#    env_file:
-#      - .env
-#    environment:
-#      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
-#      - REDIS_HOST=redis
-#      - REDIS_PORT=6379
-#    networks:
-#      - net
-#    deploy:
-#      replicas: ${APP_REPLICAS:-2}
-#    restart: always
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN:-api.localdev.online}`)"
-#      - "traefik.http.routers.app.tls=${USE_SSL:-false}"
-#      - "traefik.http.routers.app.tls.certresolver=myresolver"
-#      - "traefik.http.services.app.loadbalancer.server.port=8000"
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "50m"
-#        max-file: "6"
-#
-#  background:
-#    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:latest
-#    depends_on:
-#      - db
-#      - redis
-#    environment:
-#      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
-#      - REDIS_HOST=redis
-#      - REDIS_PORT=6379
-#    networks:
-#      - net
-#    deploy:
-#      replicas: ${BACKGROUND_REPLICAS:-2}
-#    restart: always
-#    env_file:
-#      - .env
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "50m"
-#        max-file: "6"
-#
-#  web:
-#    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:latest
-#    depends_on:
-#      - api
-#    networks:
-#      - net
-#    restart: always
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN:-app.localdev.online}`)"
-#      - "traefik.http.routers.web.tls=${USE_SSL:-false}"
-#      - "traefik.http.routers.web.tls.certresolver=myresolver"
-#      - "traefik.http.services.web.loadbalancer.server.port=3001"
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "50m"
-#        max-file: "6"
+  api:
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:latest
+    depends_on:
+      - traefik
+      - db
+      - redis
+      - dozzle
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    networks:
+      - net
+    deploy:
+      replicas: ${APP_REPLICAS:-2}
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN:-api.localdev.online}`)"
+      - "traefik.http.routers.app.tls=${USE_SSL:-false}"
+      - "traefik.http.routers.app.tls.certresolver=myresolver"
+      - "traefik.http.services.app.loadbalancer.server.port=8000"
+    logging:
+      driver: json-file
+      options:
+        max-size: "50m"
+        max-file: "6"
+
+  background:
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:latest
+    depends_on:
+      - db
+      - redis
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    networks:
+      - net
+    deploy:
+      replicas: ${BACKGROUND_REPLICAS:-2}
+    restart: always
+    env_file:
+      - .env
+    logging:
+      driver: json-file
+      options:
+        max-size: "50m"
+        max-file: "6"
+
+  web:
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:latest
+    depends_on:
+      - api
+    networks:
+      - net
+    restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN:-app.localdev.online}`)"
+      - "traefik.http.routers.web.tls=${USE_SSL:-false}"
+      - "traefik.http.routers.web.tls.certresolver=myresolver"
+      - "traefik.http.services.web.loadbalancer.server.port=3001"
+    logging:
+      driver: json-file
+      options:
+        max-size: "50m"
+        max-file: "6"
 
   dozzle:
     image: amir20/dozzle:latest
