--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,6 +1,22 @@
+version: "3.9"
+
+x-logging: &default-logging
+  driver: json-file
+  options:
+    max-size: "50m"
+    max-file: "6"
+
+networks:
+  net:
+    driver: bridge
+
+volumes:
+  postgres_data:
+  redis_data:
+
 services:
   traefik:
-    image: traefik:latest
+    image: traefik:v3.1
     restart: always
     command:
       - "--api.dashboard=true"
@@ -9,7 +25,7 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.email=${ACME_EMAIL:-your@email.com}"
+      - "--certificatesresolvers.myresolver.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
@@ -20,31 +36,70 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./letsencrypt:/letsencrypt"
-    networks:
-      - net
-    env_file:
-      - .env
+    networks: [net]
+    env_file: [.env]
     labels:
       - "traefik.enable=true"
-      # basic auth middleware
+      # Basic auth for dashboard
       - "traefik.http.middlewares.tkd-basicauth.basicauth.users=${TRAEFIK_DASHBOARD_AUTH}"
-      # router for dashboard
       - "traefik.http.routers.tkd.rule=Host(`${TRAEFIK_DASHBOARD_DOMAIN}`)"
       - "traefik.http.routers.tkd.entrypoints=websecure"
       - "traefik.http.routers.tkd.tls=true"
       - "traefik.http.routers.tkd.service=api@internal"
       - "traefik.http.routers.tkd.middlewares=tkd-basicauth"
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
+    logging: *default-logging
+
+  db:
+    image: encoredotdev/postgres:16
+    container_name: postgres_db
+    # Uncomment if you need host access:
+    # ports:
+    #   - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      # Mount init scripts prepared by CI (e.g., /opt/scripts/db/pg-init-scripts/init.sh)
+      - /opt/scripts/db/pg-init-scripts:/docker-entrypoint-initdb.d:ro
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      # Avoid trust; rely on password above
+      # - POSTGRES_HOST_AUTH_METHOD=trust
+    networks: [net]
+    env_file: [.env]
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} -h 127.0.0.1 -p 5432"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 20s
+    logging: *default-logging
+
+  redis:
+    image: redis:7.4-alpine
+    container_name: redis
+    # Internal only; expose if you truly need host access
+    # ports:
+    #   - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks: [net]
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    logging: *default-logging
 
   logto:
-    image: ghcr.io/logto-io/logto:latest
+    image: ghcr.io/logto-io/logto:1.18.0
     depends_on:
-      - db
-    entrypoint: [ "sh", "-c", "./packages/cli/custom-setup/entrypoint.sh" ]
+      db:
+        condition: service_healthy
+    entrypoint: ["sh", "-c", "./packages/cli/custom-setup/entrypoint.sh"]
     #    entrypoint: ["sh", "-c", "npm run cli db seed -- --swe && npm start"]
     environment:
       - TRUST_PROXY_HEADER=1
@@ -53,7 +108,7 @@ services:
       - DB_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/logto
       # App Specific
       - APP_NAME=platform
-      - APP_DESCRIPTION="Baseline for organization workflows automation"
+      - APP_DESCRIPTION=Baseline for organization workflows automation
       - APP_URI=${WEB_DOMAIN}
       - APP_URL=https://${WEB_DOMAIN}
       # Logto Specific
@@ -69,11 +124,10 @@ services:
       - LOGTO_GOOGLE_CLIENT_ID=${LOGTO_GOOGLE_CLIENT_ID}
       - LOGTO_GOOGLE_CLIENT_SECRET=${LOGTO_GOOGLE_CLIENT_SECRET}
     volumes:
-      - ./scripts/logto/custom-setup:/etc/logto/packages/cli/custom-setup
-    networks:
-      - net
-    env_file:
-      - .env
+      # Use the path your CI places files into:
+      - /opt/scripts/logto/custom-setup:/etc/logto/packages/cli/custom-setup:ro
+    networks: [net]
+    env_file: [.env]
     labels:
       - "traefik.enable=true"
       # Core (port 3001)
@@ -91,145 +145,98 @@ services:
       - "traefik.http.routers.logto-admin.service=logto-admin"
       - "traefik.http.services.logto-admin.loadbalancer.server.port=3002"
     healthcheck:
-      test: [ "CMD-SHELL", "wget -qO- https://${LOGTO_DOMAIN}/api/health || exit 1" ]
+      # Container-local to avoid DNS/TLS dependency during boot
+      test: ["CMD-SHELL", "wget -qO- http://localhost:3001/api/health || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 8
-      start_period: 30s
-
-  redis:
-    image: redis:latest
-    container_name: redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - net
-    restart: always    
-    healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
-
-  db:
-    image: encoredotdev/postgres:latest
-    container_name: postgres_db
-    ports:
-      - "5433:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
-      - POSTGRES_DB=${POSTGRES_DB:-postgres}
-      - POSTGRES_HOST_AUTH_METHOD=trust
-    networks:
-      - net
-    env_file:
-      - .env
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-postgres}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
-
+      retries: 20
+      start_period: 40s
+    logging: *default-logging
 
   api:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:latest
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:${IMAGE_TAG:-latest}
     depends_on:
-      - traefik
-      - db
-      - redis
-      - dozzle
-    env_file:
-      - .env
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      traefik:
+        condition: service_started
+    env_file: [.env]
     environment:
-      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    networks:
-      - net
-    deploy:
-      replicas: ${APP_REPLICAS:-2}
+    networks: [net]
     restart: always
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN:-api.localdev.online}`)"
-      - "traefik.http.routers.app.tls=${USE_SSL:-false}"
+      - "traefik.http.routers.app.rule=Host(`${API_DOMAIN}`)"
+      - "traefik.http.routers.app.entrypoints=websecure"
+      - "traefik.http.routers.app.tls=true"
       - "traefik.http.routers.app.tls.certresolver=myresolver"
       - "traefik.http.services.app.loadbalancer.server.port=8000"
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+      start_period: 20s
+    logging: *default-logging
 
   background:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:latest
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:${IMAGE_TAG:-latest}
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file: [.env]
     environment:
-      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}
+      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    networks:
-      - net
-    deploy:
-      replicas: ${BACKGROUND_REPLICAS:-2}
+    networks: [net]
     restart: always
-    env_file:
-      - .env
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
+    healthcheck:
+      test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"] # TODO: replace with a real queue heartbeat
+      interval: 30s
+      timeout: 5s
+      retries: 10
+    logging: *default-logging
 
   web:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:latest
+    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:${IMAGE_TAG:-latest}
     depends_on:
-      - api
-    networks:
-      - net
+      api:
+        condition: service_healthy
+    networks: [net]
     restart: always
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN:-app.localdev.online}`)"
-      - "traefik.http.routers.web.tls=${USE_SSL:-false}"
+      - "traefik.http.routers.web.rule=Host(`${WEB_DOMAIN}`)"
+      - "traefik.http.routers.web.entrypoints=websecure"
+      - "traefik.http.routers.web.tls=true"
       - "traefik.http.routers.web.tls.certresolver=myresolver"
       - "traefik.http.services.web.loadbalancer.server.port=3001"
-    logging:
-      driver: json-file
-      options:
-        max-size: "50m"
-        max-file: "6"
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:3001/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+      start_period: 20s
+    logging: *default-logging
 
   dozzle:
     image: amir20/dozzle:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./dozzle/data:/data
-    networks:
-      - net
-    env_file:
-      - .env
+    networks: [net]
+    env_file: [.env]
     environment:
-      DOZZLE_NO_ANALYTICS: true
-      DOZZLE_AUTH_PROVIDER: simple
+      DOZZLE_NO_ANALYTICS: "true"
+      DOZZLE_AUTH_PROVIDER: "none"
     restart: always
     labels:
       - "traefik.enable=true"
@@ -239,7 +246,6 @@ services:
       - "traefik.http.routers.dozzle.tls.certresolver=myresolver"
       - "traefik.http.routers.dozzle.service=dozzle"
       - "traefik.http.services.dozzle.loadbalancer.server.port=8080"
-      # optional: protect
       - "traefik.http.middlewares.dozzle-auth.basicauth.users=${DOZZLE_AUTH}"
       - "traefik.http.routers.dozzle.middlewares=dozzle-auth"
     healthcheck:
@@ -248,11 +254,4 @@ services:
       timeout: 30s
       retries: 5
       start_period: 30s
-
-volumes:
-  postgres_data:
-  redis_data:
-
-networks:
-  net:
-    driver: bridge
+    logging: *default-logging
