--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -162,12 +162,12 @@ services:
         condition: service_healthy
       traefik:
         condition: service_started
-    env_file: [.env]
+    env_file: [ .env ]
     environment:
       - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    networks: [net]
+    networks: [ net ]
     restart: always
     labels:
       - "traefik.enable=true"
@@ -176,11 +176,16 @@ services:
       - "traefik.http.routers.app.tls=true"
       - "traefik.http.routers.app.tls.certresolver=myresolver"
       - "traefik.http.services.app.loadbalancer.server.port=8000"
+      # Drain: mark old container unhealthy, then sleep N seconds (tune N below)
+      - "docker-rollout.pre-stop-hook=sh -c 'touch /tmp/drain && sleep 30'"
+    # Ensure the process has time to finish requests after SIGTERM as well
+    stop_grace_period: 60s
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:8000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 20
+      # Fail if /tmp/drain exists; otherwise check the normal health endpoint
+      test: [ "CMD-SHELL", "test -f /tmp/drain && exit 1; wget -qO- http://localhost:8000/health >/dev/null 2>&1 || exit 1" ]
+      interval: 5s
+      timeout: 3s
+      retries: 3
       start_period: 20s
     logging: *default-logging
 
@@ -210,7 +215,7 @@ services:
     depends_on:
       api:
         condition: service_healthy
-    networks: [net]
+    networks: [ net ]
     restart: always
     labels:
       - "traefik.enable=true"
@@ -219,11 +224,13 @@ services:
       - "traefik.http.routers.web.tls=true"
       - "traefik.http.routers.web.tls.certresolver=myresolver"
       - "traefik.http.services.web.loadbalancer.server.port=3001"
+      - "docker-rollout.pre-stop-hook=sh -c 'touch /tmp/drain && sleep 20'"
+    stop_grace_period: 45s
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:3001/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 20
+      test: [ "CMD-SHELL", "test -f /tmp/drain && exit 1; wget -qO- http://localhost:3001/health >/dev/null 2>&1 || exit 1" ]
+      interval: 5s
+      timeout: 3s
+      retries: 3
       start_period: 20s
     logging: *default-logging
 
